SERVER-85836 TenantFileImporter service skips the feature document while iterating through the donor mdb_catlog table. (#18444)

SERVER-85836 TenantFileImporter service skips the feature document while
iterating through the donor mdb_catlog table.

GitOrigin-RevId: f6698560cf818fa8527614205353e290910096ee